@@ -10,6 +10,8 @@ Release date: 2015-08-09
 Core and Builtins
 -----------------
 
+- Issue #24667: Resize odict in all cases that the underlying dict resizes.
+
 Library
 -------
 
